bootstrap/ic-shared-app/deployment-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ic-app
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ic-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ic-app
        deployment: ic-app
    spec:
      containers:
        - name: insurance-claim-app
          image: quay.io/rh-aiservices-bu/rhoai-lab-insurance-claim-app:2.2.1
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
